Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -39,11 +39,11 @@
 
 <p>I am Keith Avery, a developer and student in California. I develop for iOS and for the web, and am working towards a degree in Computer Science.</p>
 
-<p>More information about me can be found on <a href="http://kpavery.com">my website</a>.</p>
+<p>More information about me can be found on <a href="kpavery.com">my website</a>.</p>
 
 <h3>Projects</h3>
 
-<p>No projects yet. Stay tuned.</p>
+<p><a href="https://github.com/kpavery/goldmine">GOLDMine</a> - a browser extension to help UCSB students use their schedule how they like</p>
       </section>
 
     </div>
