Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 <h3>Projects</h3>
 
-<p><a href="https://github.com/kpavery/goldmine">GOLDMine</a> - a browser extension to help UCSB students use their schedule how they like</p>
+<p><a href="goldmine">GOLDMine</a> - a browser extension to help UCSB students use their schedule how they like</p>
       </section>
 
     </div>
